# vqa-llm

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  commitlint.config.js  init_setup.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template_structure.py
.github/workflows/: ci.yaml  release.yaml
experiments/: VisualQA_experiments.ipynb
serving/streamlit_app/: app.py  model.py
src/: __init__.py
src/vqa_llm/components/: __init__.py  data_transformation.py  loader_models.py  preparingData.py
src/vqa_llm/components/data_preparation/: __init__.py  image_data.py  structure_file.md  text_data.py
src/vqa_llm/config/: arguments.py  data_transformation_arguments.py  logger_arguments.py  models_arguments.py  preparingData_arguments.py
src/vqa_llm/exception/: __init__.py  exception.py
src/vqa_llm/inference/: main.py
src/vqa_llm/logger/: __init__.py  logger.py
src/vqa_llm/models/: __init__.py  encoder.py  param.yml  tokenizer.py
src/vqa_llm/models/stages/: __init__.py  answers_predictor.py  fusion_mixing.py  multiHeadAttention.py  sat.py  sat_library.py  selfAttentionBlock.py  vqa_model.py
src/vqa_llm/utils/: __init__.py  file.py  process_image.py  process_text.py
tests/fine_tuning/: main.py
tests/integration/data_preparation/: image_data.py  text_data.py
tests/integration/data_transformation/: data_transformation.py
tests/integration/models/: encoder.py  load_token.py  model.py
tests/integration/utils/: process_img.py  process_text.py
tests/unit/: exception.py  logger.py
(+4 files in other folders)
