[metadata]
license = Apache-2.0 license
license_file = LICENSE

classifiers = 
    Enviroment :: GPU :: NVIDIA CUDA :: 12
    Enviroment :: GPU :: NVIDIA CUDA :: 12 :: 12.2
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Apache-2.0 license     
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent


[options]
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
VQA_LLM=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py